# html-builder

./: Cargo.toml  README.md
benches/: sample_html.rs
src/: html.rs  lib.rs
tests/: golden.rs
tests/snapshots/: golden__comment.snap  golden__escaped.snap  golden__from_readme.snap  golden__full.snap  golden__pre_post_inner.snap
