[package]
name = "html-builder"
description = "Flexible and convenient HTML generation"
version = "0.2.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/html-builder"

[[bench]]
name = 'sample_html'
harness = false

[dev-dependencies]
criterion = "0.3.4"
pretty_assertions = "0.7.1"
