[package]
name = "html-builder"
description = "Flexible and convenient HTML generation"
version = "0.4.0"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/html-builder"

[[bench]]
name = 'sample_html'
harness = false

[dev-dependencies]
criterion = "0.3.5"
pretty_assertions = "1.2.1"
