[package]
name = "html-builder"
description = "Flexible and convenient HTML generation"
version = "0.5.1"
authors = ["Alex Sayers <alex@asayers.com>"]
edition = "2018"
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/asayers/html-builder"

[[bench]]
name = 'sample_html'
harness = false

[dependencies]
html-escape = "0.2.13"

[dev-dependencies]
criterion = "0.3.5"
insta = "1.28.0"
pretty_assertions = "1.2.1"
